Fix issue with text not centering correctly on index on small screens

--- a/styles/stylesheet.css
+++ b/styles/stylesheet.css
@@ -19,6 +19,7 @@ body {
 
 #main_page {
   overflow: hidden;
+  margin-left: 0;
 }
 
 /* Need to add padding for the content to be displayed below navbar */
@@ -75,7 +76,7 @@ p {
   text-align: center;
   margin-left: auto;
   margin-right: auto;
-  width: 50vw;
+  width: 75vw;
   /*whatever width you want*/
 }
 
